syntax = "proto3";

package certificate;

import "github.com/ZTP/pnp/pnp-proto/pnp.proto";

service Certificate {
    rpc GetCertificates (ClientInfo) returns (ServerCertificate) {}
}

message ClientInfo {
    pnp.CommonClientInfo commonClientInfo = 1;
}

message ServerCertificate {
    pnp.CommonServerResponse commonServerResponse = 1;
    bytes serverCert = 2;
    string clientEnvName = 3;
    string responseMessage = 4;
}
